# PSCIOB

./: .gitignore  CMakeLists.txt  License.txt  README  README.md  intro.dox
GeneralUtils/: CMakeLists.txt  GeneralUtils-config.cmake.in  generalutils-config.cmake
GeneralUtils/BoundingBoxesUtils/: BoundingBoxesUtils.cpp  BoundingBoxesUtils.h
GeneralUtils/GeneralUtils/: GeneralUtils.h  GenericParametricFunctions.h  PairWiseIntersectionCostFunctions.h  ScalarFunctions.h  SetsUtils.h  SetsUtils.txx
GeneralUtils/ITKUtils/: ITKUtils.cpp  ITKUtils.h  ITKUtils.txx  LabelMapUtils.h  LabelMapUtils.txx  LineIntegralImageAndSquaredImageFilter.h  LineIntegralImageAndSquaredImageFilter.txx  ObjectPixelSet.h  PixelSetUtils.h  PixelSetUtils.txx  WhiteNoiseImageSource.h  WhiteNoiseImageSource.hxx
GeneralUtils/ITKVTKUtils/: vtkITK2DUCharLabelMapAlgorithm.cxx  vtkITK2DUCharLabelMapAlgorithm.h  vtkITK2DUCharLabelMapData.cxx  vtkITK2DUCharLabelMapData.h  vtkITK2DUCharLabelMapSource.cxx  vtkITK2DUCharLabelMapSource.h  vtkITK2DUIntLabelMapAlgorithm.cxx  vtkITK2DUIntLabelMapAlgorithm.h  vtkITK2DUIntLabelMapData.cxx  vtkITK2DUIntLabelMapData.h  vtkITK2DUIntLabelMapSource.cxx  vtkITK2DUIntLabelMapSource.h  vtkITK2DUShortLabelMapAlgorithm.cxx  vtkITK2DUShortLabelMapAlgorithm.h  vtkITK2DUShortLabelMapData.cxx  vtkITK2DUShortLabelMapData.h  vtkITK2DUShortLabelMapSource.cxx  vtkITK2DUShortLabelMapSource.h  vtkITK3DUCharLabelMapAlgorithm.cxx  vtkITK3DUCharLabelMapAlgorithm.h  vtkITK3DUCharLabelMapData.cxx  vtkITK3DUCharLabelMapData.h  vtkITK3DUCharLabelMapSource.cxx  vtkITK3DUCharLabelMapSource.h  vtkITK3DUIntLabelMapAlgorithm.cxx  vtkITK3DUIntLabelMapAlgorithm.h  vtkITK3DUIntLabelMapData.cxx  vtkITK3DUIntLabelMapData.h  vtkITK3DUIntLabelMapSource.cxx  vtkITK3DUIntLabelMapSource.h  vtkITK3DUShortLabelMapAlgorithm.cxx  vtkITK3DUShortLabelMapAlgorithm.h  vtkITK3DUShortLabelMapData.cxx  vtkITK3DUShortLabelMapData.h  vtkITK3DUShortLabelMapSource.cxx  vtkITK3DUShortLabelMapSource.h  vtkPolyDataToITK2DUCharLabelMap.cxx  vtkPolyDataToITK2DUCharLabelMap.h  vtkPolyDataToITK2DUIntLabelMap.cxx  vtkPolyDataToITK2DUIntLabelMap.h  (+11 more)
GeneralUtils/LinearTransformUtils/: 2DTransformUtils.cpp  2DTransformUtils.h  3DTransformUtils.cpp  3DTransformUtils.h  TransformUtils.cpp  TransformUtils.h
GeneralUtils/RandomVariables/: MultivariatePDF.cpp  MultivariatePDF.h  PDFBase.h  PDFBase.txx  RandomVariables.cpp  RandomVariables.h  UnivariatePDF.cpp  UnivariatePDF.h
GeneralUtils/Tests/: CMakeLists.txt  SomeTests.cxx  TestClipper.cxx  TestInheritance.cxx  Test_C_Features.cxx  Test_ITK_Features.cxx  Test_VTK_Features.cxx
GeneralUtils/VTKClipperWrapper/: vtkBooleanOperation2DPolygons.cpp  vtkBooleanOperation2DPolygons.h
GeneralUtils/VTKUtils/: VTKUtils.cpp  VTKUtils.h  vtkHexagon3DSource.cxx  vtkHexagon3DSource.h
PSCIOB/: CMakeLists.txt  DVPT_NOTES.txt  PSCIOB-config.cmake  PSCIOB-config.cmake.in
PSCIOB/CostFunctions/: AverageObjectToImageCostFunction.h  CostFunction_Base.h  MultipleObjectsToImageCostFunction.h  SceneCostFunction_Base.h  SceneEnergy.h  SceneEnergy.txx  SceneToImageCostFunction.h  SensedObjectWithSurroundingsToImageCostFunction.h  SensedSceneToImageCostFunction.h  SensedSceneToImageMeanSquareErrorCostFunction.h  SensedSingleObjectInOutCoherence.h  SensedSingleObjectInOutContrast.h  SensedSingleObjectInOutMBhattDistance.h  SensedSingleObjectInOutMMahalaDist.h  SensedSingleObjectInOutMMahalanobisDistance.h  SensedSingleObjectInOutWeighted_SAD.h  SensedSingleObjectToImageCostFunction.h  SensedSingleObjectToImageMeanAbsoluteDifferenceCostFunction.h  SensedSingleObjectToImageMeanSquareErrorCostFunction.h  SingleObjectEnergy.h  SingleObjectEnergy.txx  SingleObjectSceneToImageCostFunction.h
PSCIOB/ExampleApplications/: CMakeLists.txt  Example_3DForceBiased_Algo.cxx  Example_Ellipses2D_Synthese.cxx  Example_Ellipses2D_Synthese.h  Example_FallingSpheres.cxx  Example_SyntheticEllipses.cxx  README
PSCIOB/ForceBiasedAlgorithm/: FBMovementManager.h  ForceBiasedAlgorithm.h
PSCIOB/GeometricShapes/: Direct3DSphere.cpp  Direct3DSphere.h  Fast2DDisk.cpp  Fast2DDisk.h  Fast2DEllipse.cpp  Fast2DEllipse.h  Fast2DOrientableRectangle.cpp  Fast2DOrientableRectangle.h  Fast2DRectangle.cpp  Fast2DRectangle.h  Fast2D_WHO_Rectangle.cpp  Fast2D_WHO_Rectangle.h  shape2DDisk.cpp  shape2DDisk.h  shape2DEllipse.cpp  shape2DEllipse.h  shape2DRectangle.cpp  shape2DRectangle.h  shape3DCuboid.cpp  shape3DCuboid.h  shape3DCylinder.cpp  shape3DCylinder.h  shape3DPoint.cpp  shape3DPoint.h  shape3DSphere.cpp  shape3DSphere.h
PSCIOB/HoughTransform/: GeneralizedHoughTransformAlgorithm_Base.h  GeneralizedHoughTransformAlgorithm_SimpleBinning.h  GeneralizedHoughTransformAlgorithm_Test.h  GeneralizedHoughTransform_Pow2DTree_VoteAggregator.h  ImageFeaturePointDetector_2DCannyEdges_Orientation.h  ImageFeaturePointDetector_Base.h  ImageFeaturePointDetector_GradientAngles.h
PSCIOB/ObjectCollection/: BaseScene.h  BaseScene.txx  DummyScene.h  DummyScene.txx  LabelImageScene.h  LabelImageScene.txx  LabelMapScene.h  LabelMapScene.txx  ObjectInSceneDataContainers.h  ObjectTypesLibrary.h  ObjectTypesLibrary.txx  VTKScene.h  VTKScene.txx
PSCIOB/ObjectInteractionPriors/: LabelImageObjectOverlap.h  LabelObjectOverlap.h  LabelObjectOverlapDetector.h  ObjectInteractionManager.h  ObjectOverlap_Pow2DTree.h  ObjectOverlap_Pow2DTree.txx  ObjectsWithoutInteraction.h  PixelSetObjectOverlap.h  VTKObjectOverlap.h
PSCIOB/OptimizationManager/: AllObjectsOptimizationManager.h  AllObjectsTranslationOptimizationManager.h  OptimizationManager_Base.h  SceneCleaner.h  SceneOptimizationManager_Base.h  SceneStateOptimizationManager.h  SensorAppearanceOptimizationManager.h  SensorOptimizationManager.h  SingleObjectTranslationOptimizationManager.h  SingleSceneObjectOptimizationManager.h
PSCIOB/Optimizer/: DynamicMBOD_Optimizer.h  MBDOptimizer.h  MultipleBirthOptimizeAndDeathOptimizer.h  NelderMeadeSimplexOptimizer.h  OptimizerCostFunction.h  Optimizer_Base.h  PowellOptimizer.h  RandomJumpSAOptimizer.h  ScaledPowellOptimizer.h  SimulatedAnnealingOptimizer.h
(+76 files in other folders)
